# thai-plate-ocr

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: thai_plate_ocr_colab.ipynb
reports/: summary.md  test_predictions.json  test_predictions.md
scripts/: derive_char_map.py  predict_demo.py  test_on_validation.py
src/thai_plate_ocr/: __init__.py  char_map.py  cli.py  config.py  evaluate.py  pipeline.py
src/thai_plate_ocr/data/: download.py
src/thai_plate_ocr/models/: detector.py  recognizer.py
src/thai_plate_ocr/serve/: api.py
tests/: test_api_health.py  test_cli_imports.py  test_config.py  test_pipeline_ordering.py
